[package]
name = "hyper-named-pipe"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.2", features = ["http1", "client-legacy", "tokio"] }
pin-project-lite = { version = "0.2.8" }
winapi = { version = "0.3.9", features = ["winerror"] }
tokio = { version = "1.35", features = ["net"] }
tower-service = { version = "0.3" }

[dev-dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1", features = ["client", "server", "http1"] }
tokio = { version = "1.35", features = ["macros"] }
thiserror = "1"
